# ApexEngine

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Common.h  Doxyfile  Input.cpp  Input.h  Log.cpp  Log.h  README.md  Window.cpp  Window.h  main.cpp
.github/workflows/: docs.yml
data/alloys/: bronze.json5
data/compounds/: water.json5
data/elements/: actinium.json5  aluminum.json5  americium.json5  antimony.json5  argon.json5  arsenic.json5  astatine.json5  barium.json5  berkelium.json5  beryllium.json5  bismuth.json5  bohrium.json5  boron.json5  bromine.json5  cadmium.json5  calcium.json5  californium.json5  carbon.json5  cerium.json5  cesium.json5  chlorine.json5  chromium.json5  cobalt.json5  copernicium.json5  copper.json5  curium.json5  darmstadtium.json5  dubnium.json5  dysprosium.json5  einsteinium.json5  erbium.json5  europium.json5  fermium.json5  flerovium.json5  fluorine.json5  francium.json5  gadolinium.json5  gallium.json5  germanium.json5  gold.json5  (+78 more)
docs/: COMMANDS.md  JOURNAL.md  STYLE.md
src/: Assert.cpp  Assert.h  Common.h  Input.cpp  Input.h  Log.cpp  Log.h  MaterialDatabase.cpp  MaterialDatabase.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp
